--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -18,6 +18,8 @@ registrationapp.patient.registrationSummary=Registration Summary
 
 registrationapp.patient.name.label=Name
 registrationapp.patient.name.question=What's the client's name?
+registrationapp.patient.alias.question=What's the client's Nickname?
+
 
 registrationapp.patient.phone.label=Phone Number
 registrationapp.patient.phone.question=What's the client phone number?
